# AURORA

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  are_callgrind_out  callgrind.out  mutagen.yml  slurm-604755.out
checkpoints/: TestCkpt0000001-1-0-0.afvdat  TestCkpt0000001-1-0-0.afvmeta  TestCkpt0000002-2-0-0.afvmeta  heatdis-0-0-0.afvdat  heatdis-0-0-0.afvmeta  heatdis-0-2-0.afvdat  heatdis-0-2-0.afvmeta  heatdis-200-0-0.afvmeta  heatdis-200-1-0.afvdat  heatdis-200-1-0.afvmeta  heatdis-200-2-0.afvmeta  heatdis-200-3-0.afvmeta  heatdis-400-0-0.afvdat  heatdis-400-0-0.afvmeta  heatdis-400-1-0.afvdat  heatdis-400-1-0.afvmeta  heatdis-400-2-0.afvdat  heatdis-400-2-0.afvmeta  heatdis-400-3-0.afvdat  heatdis-400-3-0.afvmeta  heatdis-600-0-0.afvdat  heatdis-600-0-0.afvmeta  heatdis-600-1-0.afvdat  heatdis-600-1-0.afvmeta  heatdis-600-2-0.afvdat  heatdis-600-2-0.afvmeta  heatdis-600-3-0.afvdat  heatdis-600-3-0.afvmeta
cmake/: FindMPI.cmake  FindThreads.cmake  FindUCX.cmake  aarch64-linux-gnu-toolchain.cmake  x86_64-linux-gnu-toolchain.cmake
common/: CMakeLists.txt
common/include/: common_types.h  operating_configuration.h
common/include/aci/: aci.h  aci_callbacks.h  aci_internal.h
common/include/acn/: acn.h
common/include/ads/: ads.h
common/include/afv/: afv.h  afv_metadata.h
common/include/arm/: arm.h  arm_am.h
common/src/aci/: aci.c  aci_callbacks.c  aci_internal.c
common/src/acn/: acn_instance.c  acn_tick.c
common/src/ads/: ads.c
common/src/afv/: afv.c  afv_file.c  afv_metadata.c
common/src/arm/: arm.c  arm_am.c  arm_rm.c  arm_rw.c
docs/: Building.md  High Level Design.canvas  Mutagen.md  Notifications.canvas
docs/Client Lib/: AURORA Client Configuration.md
docs/Common Lib/: AURORA Blob.md  AURORA Common Lib.md  AURORA Completion Notification - ACN.md  AURORA Connection Instance - ACI.md  AURORA Discovery Service - ADS.md  AURORA Operating Configuration - AOC.md  AURORA Region Manager - ARM.md
docs/Server Lib/: AURORA Command Runner - ACR.md  AURORA Connection Listener - ACL.md  AURORA Instance Manager - AIM.md
docs/Testing/: README.md  quick_note.md
lib/: CMakeLists.txt
lib/include/: aul.h  aul_configuration.h  aul_internal.h
lib/src/: aul.c  aul_checkpoint.c  aul_configuration.c  aul_init.c  aul_mem.c  aul_restart.c
results/0.0.0/: are_callgrind_out  aurora16_bench_results.csv  aurora32_bench_results.csv  aurora8_bench_results.csv  slurm-600470.out
results/0.0.1-3/: .~lock.heatdis_aurora_all_times.csv#  .~lock.heatdis_aurora_final_times.csv#  .~lock.heatdis_veloc_final_times.csv#  heatdis_aurora_final_times.csv  heatdis_veloc_final_times.csv
results/0.0.1-3/0.0.1-2/old/: heatdis_aurora_all_times.csv
results/0.0.1-3/old/: heatdis_aurora_final_times.csv
results/0.0.2-0/0.0.2-1/: heatdis_aurora_all_times.csv  heatdis_aurora_final_times.csv  heatdis_veloc_all_times.csv  heatdis_veloc_final_times.csv
results/0.0.2-1/: heatdis_aurora_final_times.csv  heatdis_orig_final_times.csv  heatdis_veloc_all_times.csv  heatdis_veloc_final_times.csv
results/0.0.2-3/: heatdis_aurora_final_times.csv  heatdis_aurora_restore_times.csv  heatdis_orig_final_times.csv  heatdis_orig_test_times.csv  heatdis_veloc_final_times.csv  heatdis_veloc_restore_times.csv  heatdis_veloc_test_times.csv
scripts/: env.sh  format_data.py  launch_bf.sh  plot_scaling.py  run_tests.sh  runners.sh  setup_env.sh  test_env.sh
scripts/backend/: launch_BF.sh  launch_node.sh
scripts/clusters/odp0k/: env.sh  launch_config.sh
scripts/clusters/rome/: env.sh  launch_config.sh
scripts/collection/: block_test.py  heatdis_all.py  heatdis_final.py
scripts/launch/: build.sh  build.zsh  launch.batch  launch.sh  launch_test.zsh  launch_test_bf.zsh  launch_test_host.zsh  launch_test_none.zsh  mpi_launch.batch  mpi_launch.sh
scripts/launchers/backend/: launch_bf.sh
scripts/odp0k/: launch_config.sh
scripts/plotting/: parse_heatdis.py  parse_heatdis_final_times.py  parse_heatmap_final.py  plot_heatdis_any.py  plot_heatdis_final.py  plot_heatmap.py  plot_heatmap_all.py  plot_scaling.py  plot_scaling_multi.py
scripts/rome/: launch_config.sh
scripts/statistics/: block_test.py
scripts/tests/: aurora_bf_heatdis_single.sh  aurora_block_test.batch  block_test.zsh  block_test_aurora.zsh  block_test_veloc.zsh  discovery.zsh  heat_distribution.zsh  heat_distribution_aurora.zsh  heat_distribution_veloc.zsh  test.batch
server/: CMakeLists.txt
server/include/: acl.h  acr.h  aim.h  are.h
server/include/acr/: acr.h
server/include/afv/: afv.h  afv_file.h  afv_metadata.h
server/src/: acl.c  acr.c  aim.c  are.c  main.c
server/src/acr/: acr.c  acr_cmd_checkpoint.c  acr_cmd_connection.c  acr_cmd_nop.c  acr_cmd_restart.c
server/src/afv/: afv.c  afv_file.c  afv_metadata.c
tests/: CMakeLists.txt
tests/block_test/: block_test.c  block_test_aurora.c  block_test_veloc.c  build.cmake
tests/discovery/: build.cmake  test_discovery.c
tests/discovery_mpi/: build.cmake  test_discovery.c
tests/heatdis/: build.cmake  heatdis.h  heatdis_aurora.c
tests/heatdis_veloc/: build.cmake  heatdis.h  heatdis_file.c  heatdis_mem.c
tests/savemem/: build.cmake  savemem.c
tests/test_transport/: build.cmake  test_transport.c
